<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/defense"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/defense_dice_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/initial_dice_number"
                        android:textSize="40sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:onClick="decreaseDefenseDice"
                            android:text="@string/subtract" />

                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:onClick="increaseDefenseDice"
                            android:text="@string/add" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/offense"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/offense_dice_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/initial_dice_number"
                        android:textSize="40sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <Button
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:onClick="decreaseOffenseDice"
                            android:text="@string/subtract" />

                        <Button
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:onClick="increaseOffenseDice"
                            android:text="@string/add" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roll"
                android:onClick="rollResults"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/results"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/defense_first_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/initial_dice_number"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/defense_second_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/initial_dice_number"
                        android:textSize="40sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/offense_first_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/initial_dice_number"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/offense_second_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/initial_dice_number"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/offense_third_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/initial_dice_number"
                        android:textSize="40sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
